# vgp-server

./: .gitignore  .gitmodules  Cargo.toml  build.rs
src/: game_pad_service.rs  main.rs  proto.rs
src/game_pad/: linux_impl.rs  mod.rs
