[package]
name = "vgp-server"
version = "0.1.0"
authors = ["Bryan Dela Cruz <bryanmdlx@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
simple_logger = "1.11.0"
tonic = "0.3"
prost = "0.6"
async-stream = "0.2"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "stream", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.4.0"

[build-dependencies]
tonic-build = "0.3"
